script photographer page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 
     <main>
-        <section id="card">
-            <a href="">
+        <section id="card" onclick="getId(this.id)" >
+            <a href="photographers.html">
                 <div>    
                     <img src="" alt="">
                 </div>
@@ -49,9 +49,7 @@
             <h3></h3>
             <p></p>
             <small></small>
-            <ul>
-                <li></li>
-            </ul>
+            <ul></ul>
         </section>
     </main>
     
