récuperation du param via get url, video or img Ok

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
 
     <main>
-        <section id="card" onclick="getId(this.id)" >
-            <a href="photographers.html">
+        <section id="card">
+            <a>
                 <div>    
-                    <img src="" alt="">
+                    <img class="portrait" src="" alt="">
                 </div>
-                <h2></h2>
+                <h2 class="name"></h2>
             </a>
-            <h3></h3>
-            <p></p>
-            <small></small>
-            <ul></ul>
+            <h3 class="location"></h3>
+            <p class="tagLine"></p>
+            <small class="price"></small>
+            <ul class="tagList"></ul>
         </section>
     </main>
     
