--- a/photographers.html
+++ b/photographers.html
@@ -62,6 +62,7 @@
     
     </section>
 
+    <form action=""></form>
 
 <script src="js/photographersScript.js" ></script>
 <script src="js/contact.js" ></script>
