--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             </h1>
         </a>
 
-        <ul>
-            <li>#Portrait</li>
-            <li>#Art</li>
-            <li>#Fashion</li>
-            <li>#Architecture</li>
-            <li>#Travel</li>
-            <li>#Sport</li>
-            <li>#Animals</li>
-            <li>#Events</li>
+        <ul id="tagList" >
+            <li class="portrait tag" >#Portrait</li>
+            <li class="art tag" >#Art</li>
+            <li class="fashion tag">#Fashion</li>
+            <li class="architecture tag" >#Architecture</li>
+            <li class="travel tag">#Travel</li>
+            <li class="sport tag" >#Sport</li>
+            <li class="animals tag">#Animals</li>
+            <li class="events tag" >#Events</li>
         </ul>
 
         <h1>
