--- a/photographers.html
+++ b/photographers.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/syle.css">
     <link rel="stylesheet" href="css/photographerStyle.css">
     <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/form.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -54,7 +55,12 @@
             </a>
             <div class="subMedia">
                 <div class="titlePhotoContainer"><h3 class="titlePhoto"></h3></div>
-                <div class="likePriceMedia"><span class="pricePhoto"></span><span class="likeNb"></span><i class="fas fa-heart"></i></div>
+                <div class="likePriceMedia"><span class="pricePhoto"></span>
+                    <input class="checkboxLike" name="test" type="checkbox"/>
+                    <label for="" aria-label="like">
+                        <span class="likeNb"></span><i class="fas fa-heart"></i></div>
+                    </label>
+                </div>
             </div>
         </article>
 
@@ -62,10 +68,47 @@
     
     </section>
 
-    <form action=""></form>
+    <div class="bgform">
+        <div id="titleCloseForm">
+            <h1>
+                Contactez-moi
+                <div class="nameForm"></div>
+
+            </h1>
+            <span id="closeForm"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M42 4.23L37.77 0L21 16.77L4.23 0L0 4.23L16.77 21L0 37.77L4.23 42L21 25.23L37.77 42L42 37.77L25.23 21L42 4.23Z" fill="white"/>
+                </svg>
+                </span>
+        </div>
+        <form 
+            name="formulaire"    
+            action="index.html"
+            method=""
+            id="formulaire"
+        >
+        <div class="formData">
+            <label for="first">Prénom</label><br>
+            <input type="text" name="first" id="first" minlength="2" maxlength="20"required>
+        </div>
+        <div class="formData">
+            <label for="last">Nom</label><br>
+            <input type="text" name="last" id="last" minlength="2" maxlength="20" required>
+        </div>
+        <div class="formData">
+            <label for="email">Email</label><br>
+            <input type="email" name="email" id="email" required>
+        </div>
+        <div class="formData">
+            <label for="message">Votre Message</label><br>
+            <input type="text" name="message" id="message" minlength="2" maxlength="400">
+        </div>
+        <input type="submit" id="submitBtn" value="Envoyer">
+
+    </form>
+    </div>
 
 <script src="js/photographersScript.js" ></script>
-<script src="js/contact.js" ></script>
+
 
 
 </body>
