--- a/photographers.html
+++ b/photographers.html
@@ -56,10 +56,9 @@
             <div class="subMedia">
                 <div class="titlePhotoContainer"><h3 class="titlePhoto"></h3></div>
                 <div class="likePriceMedia"><span class="pricePhoto"></span>
-                    <input class="checkboxLike" name="test" type="checkbox"/>
-                    <label for="" aria-label="like">
-                        <span class="likeNb"></span><i class="fas fa-heart"></i></div>
-                    </label>
+
+                    <span class="likeNb"></span><i class="fas fa-heart likeHeart "></i></div>
+
                 </div>
             </div>
         </article>
