navigation tab terminé

--- a/photographers.html
+++ b/photographers.html
@@ -86,19 +86,19 @@
             id="formulaire"
         >
         <div class="formData">
-            <label for="first">Prénom</label><br>
+            <label for="first">Prénom</label>
             <input type="text" name="first" id="first" minlength="2" maxlength="20"required>
         </div>
         <div class="formData">
-            <label for="last">Nom</label><br>
+            <label for="last">Nom</label>
             <input type="text" name="last" id="last" minlength="2" maxlength="20" required>
         </div>
         <div class="formData">
-            <label for="email">Email</label><br>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
         </div>
         <div class="formData">
-            <label for="message">Votre Message</label><br>
+            <label for="message">Votre Message</label>
             <input type="text" name="message" id="message" minlength="2" maxlength="400">
         </div>
         <input type="submit" id="submitBtn" value="Envoyer">
