--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="fr">
+<html xml:lang="fr" lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
             </h1>
         </a>
 
-        <ul id="tagList" >
+        <ul id="nav" >
             <li class="portrait tag" >#Portrait</li>
             <li class="art tag" >#Art</li>
             <li class="fashion tag">#Fashion</li>
@@ -31,7 +31,7 @@
             <li class="events tag" >#Events</li>
         </ul>
 
-        <h1>
+        <h1 id="titlePhotoHeader">
             Nos photographes
         </h1>
 
