--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html xml:lang="fr" lang="fr">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/syle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,7 +20,7 @@
             </h1>
         </a>
 
-        <ul id="nav" >
+        <ul id="nav">
             <li class="portrait tag" >#Portrait</li>
             <li class="art tag" >#Art</li>
             <li class="fashion tag">#Fashion</li>
@@ -36,8 +36,7 @@
         </h1>
 
     </header>
-
-
+    
     <main>
         <section id="card">
             <a>
