--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/syle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,16 +21,18 @@
             </h1>
         </a>
 
-        <ul id="nav">
-            <li class="portrait tag" >#Portrait</li>
-            <li class="art tag" >#Art</li>
-            <li class="fashion tag">#Fashion</li>
-            <li class="architecture tag" >#Architecture</li>
-            <li class="travel tag">#Travel</li>
-            <li class="sport tag" >#Sport</li>
-            <li class="animals tag">#Animals</li>
-            <li class="events tag" >#Events</li>
-        </ul>
+        <nav>
+            <ul id="nav">
+                <li class="portrait tag" >#Portrait</li>
+                <li class="art tag" >#Art</li>
+                <li class="fashion tag">#Fashion</li>
+                <li class="architecture tag" >#Architecture</li>
+                <li class="travel tag">#Travel</li>
+                <li class="sport tag" >#Sport</li>
+                <li class="animals tag">#Animals</li>
+                <li class="events tag" >#Events</li>
+            </ul>
+        </nav>
 
         <h1 id="titlePhotoHeader">
             Nos photographes
@@ -41,11 +44,11 @@
         <section id="card">
             <a>
                 <div>    
-                    <img class="portrait" src="" alt="">
+                    <img class="portrait" alt="" src="a">
                 </div>
-                <h2 class="name"></h2>
+                <h2 class="name">a</h2>
             </a>
-            <h3 class="location"></h3>
+            <h3 class="location">a</h3>
             <p class="tagLine"></p>
             <small class="price"></small>
             <ul class="tagList"></ul>
